--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
 <style>
 /* HELLO MAX! THIS IS MY CSS! */
 body {
-	background-image: url('tandem_grey.png');
+	background-image: url('pict/tandem_grey.png');
 }
 body::before {
-	content: url('tandem_grey.png') url('broken.png') url('clock.png') url('colors.png')  url('theCertificate.png') url('thePerks.png');
+	content: url('pict/tandem_grey.png') url('pict/broken.png') url('pict/clock.png') url('pict/colors.png')  url('pict/theCertificate.jpg') url('pict/thePerks.png');
 	display: none;
 }
 .certificate {
 	background: #fff;
-	background-image: url('theCertificate.jpg');
+	background-image: url('pict/theCertificate.jpg');
 	box-shadow: 0 0 5px #888;
-	 
 }
 .benefits {
 	background: #fff;
-	background-image: url('thePerks.png');
+	background-image: url('pict/thePerks.png');
 	box-shadow: 0 0 5px #888;
 }
 .no {
-	background-image: url('broken.png');
+	background-image: url('pict/broken.png');
 }
 .yes {
-	background-image: url('colors.png');
+	background-image: url('pict/colors.png');
 }
 .maybe {
-	background-image: url('clock.png');
+	background-image: url('pict/clock.png');
 }
+
 #image {
 	height: 1300px;
 	width: 900px;
