--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
+  <script src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 <link rel="icon" type="image/jpg" href="favicon.jpg">
 <style>
 /* HELLO MAX! THIS IS MY CSS! */
